--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,4 +58,6 @@
         Logout
     </button>
 </mat-menu>
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
