--- a/src/app/modules/timetracker/components/navigator/navigator.component.html
+++ b/src/app/modules/timetracker/components/navigator/navigator.component.html
@@ -1,7 +1,10 @@
 <div class="nav-container">
-    <div fxLayout="row"
-         fxLayoutAlign="space-between center">
-        <mat-button-toggle-group name="nav" aria-label="Navigator" value="Today">
+    <div fxLayout.gt-xs="row"
+         fxLayoutAlign.gt-xs="space-between center"
+         fxLayout.xs="column"
+         fxLayoutGap="16px"
+         fxLayoutAlign.xs="center center">
+        <mat-button-toggle-group name="nav" aria-label="Navigator" value="Today" appearance="legacy">
             <mat-button-toggle value="Previous"
                                mwlCalendarPreviousView
                                [view]="view"
@@ -23,17 +26,17 @@
             </mat-button-toggle>
         </mat-button-toggle-group>
         <h1>Hours from {{ viewDate | calendarDate: (view + 'ViewTitle'):locale }}</h1>
-        <mat-button-toggle-group name="view" aria-label="Calendar View" value="Month">
+        <mat-button-toggle-group name="view" aria-label="Calendar View" value="Month" fxHide.xs appearance="legacy">
             <mat-button-toggle value="Month"
-                               (click)="viewChange.emit(CalendarView.Month)"
+                               (click)="changeView(CalendarView.Month)"
                                [class.active]="view === CalendarView.Month">Month
             </mat-button-toggle>
             <mat-button-toggle value="Week"
-                               (click)="viewChange.emit(CalendarView.Week)"
+                               (click)="changeView(CalendarView.Week)"
                                [class.active]="view === CalendarView.Week">Week
             </mat-button-toggle>
             <mat-button-toggle value="Day"
-                               (click)="viewChange.emit(CalendarView.Day)"
+                               (click)="changeView(CalendarView.Day)"
                                [class.active]="view === CalendarView.Day">Day
             </mat-button-toggle>
         </mat-button-toggle-group>
