--- a/src/app/modules/timetracker/components/calendar/calendar.component.scss
+++ b/src/app/modules/timetracker/components/calendar/calendar.component.scss
@@ -1,6 +1,15 @@
+@import 'src/app/styles/variables';
+
 .cal-container * {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.popover {
+  margin: -16px;
+  color: white;
+  background-color: mat-color($customPrimary, 500);
+  width: 400px;
 }
