Add favorites for task reusability

--- a/src/app/modules/timetracker/components/container/container.component.html
+++ b/src/app/modules/timetracker/components/container/container.component.html
@@ -12,7 +12,7 @@
         [refresh]="refresh"
         (doubleClick)="createEvent()"
         (dayClicked)="dayClicked($event)"
-        (eventClicked)="handleEvent('Clicked', $event)"
+        (eventClicked)="handleEvent($event)"
         (eventTimesChanged)="eventTimesChanged($event)"
 ></app-calendar>
 <app-time-events [events]="sortedEvents"
