--- a/src/app/modules/timetracker/components/events/events.component.scss
+++ b/src/app/modules/timetracker/components/events/events.component.scss
@@ -9,13 +9,14 @@
     margin-left: 16px;
   }
 
-   .mat-form-field {
+  .mat-form-field {
     width: 95%;
-
-     &:nth-of-type(2) {
-       width: 90px;
-     }
   }
+
+  td:nth-of-type(2) .mat-form-field {
+    width: 90px;
+  }
+
 }
 
 .table-row {
