--- a/src/app/modules/timetracker/components/container/container.component.html
+++ b/src/app/modules/timetracker/components/container/container.component.html
@@ -19,5 +19,6 @@
                  [viewDate]="viewDate"
                  [refresh]="refresh"
                  (deleteEvent)="deleteEvent($event)"
-                 (addEvent)="createEvent()">
+                 (addEvent)="createEvent()"
+                 (saveEvents)="saveEvents(true)">
 </app-time-events>
