--- a/src/app/modules/timetracker/components/calendar/calendar.component.scss
+++ b/src/app/modules/timetracker/components/calendar/calendar.component.scss
@@ -6,3 +6,10 @@
   -ms-user-select: none;
   user-select: none;
 }
+
+.action-btn, .icon {
+  font-size: 16px !important;
+  width: 16px !important;
+  height: 16px !important;
+  line-height: 16px !important;
+}
