Add send report functionality

--- a/src/app/modules/timetracker/components/container/container.component.html
+++ b/src/app/modules/timetracker/components/container/container.component.html
@@ -26,5 +26,6 @@
                  [refresh]="refresh"
                  (deleteEvent)="deleteEvent($event)"
                  (addEvent)="createEvent()"
+                 (sendEvent)="sendEvents()"
                  (saveEvents)="saveEvents(true)">
 </app-time-events>
